# ChatDiamond

./: .gitignore  .gitmodules  README.md
Classes/: CDAboutWindow.uc  CDChatWindowChat.uc  CDChatWindowEmojis.uc  CDChatWindowHelperContextMenu.uc  CDClientSideWindow.uc  CDConfigurationWindow.uc  CDDiscordActor.uc  CDEmoDisplayArea.uc  CDHash.uc  CDLoadedTextureList.uc  CDMiniFrameList.uc  CDModMenuItem.uc  CDModMenuWindowFrame.uc  CDUTChatTextTextureAnimEmoteArea.uc  CDUTConsole.uc  CDUTConsoleWindow.uc  CDUWindowCreditsControl.uc  UTChat.uc  UTChatActor.uc  UTChatGRI.uc  UTChatHud.uc  UTChatHudDM.uc  UTChatHudTM.uc  UTChatHudX.uc  UTChatLogo.uc  UTChatReplacement.uc  UTChatStartUp.uc  UTChatSvrAdds.uc  UTChatTabWindow.uc  UTChatTextArea.uc  UTChatWRI.uc  UTChatWinCheck.uc  UTChatWinControl.uc  UTChatWindowAdmin.uc  UTChatWindowChat.uc  UTChatWindowConfig.uc  UTChatWindowEmojis.uc  UTChatWindowFrame.uc
Misc/: CDBuildTracker.bat  RawCodeFilteredLogs.txt
ReadMe/: chatdiamond.tex
Textures/: 04_SHOCK010.pcx  04_SHOCK02.pcx  04_SHOCK03.pcx  04_SHOCK04.pcx  04_SHOCK05.pcx  04_SHOCK06.pcx  04_SHOCK07.pcx  04_SHOCK08.pcx  04_SHOCK09.pcx  1faceless.pcx  ARGUE01.pcx  ARGUE04.pcx  ARGUE09.pcx  ARGUE11.pcx  ARGUE15.pcx  ARGUE16.pcx  ARSEMISS02.pcx  ARSEMISS03.pcx  ARSEMISS04.pcx  ARSEMISS05.pcx  ARSEMISS06.pcx  ARSEMISS07.pcx  ARSEMISS08.pcx  ARSEMISS09.pcx  ARSEMISS10.pcx  ARSEMISS12.pcx  ARSEMISS15.pcx  BANANA1.pcx  BANANA2.pcx  BANANA3.pcx  BANANA4.pcx  BANANA5.pcx  BANANA6.pcx  BANANA7.pcx  BANANA8.pcx  BARF02.pcx  BARF05.pcx  BARF08.pcx  BARF09.pcx  BARF12.pcx  (+28 more)
UTNativeEssentials/: CMakeLists.txt  GenerateProjectFiles.bat
UTNativeEssentials/ChatDiamond/: CMakeLists.txt
UTNativeEssentials/ChatDiamond/Inc/: ActorNativeClass.h  ChatDiamondNative.h
UTNativeEssentials/ChatDiamond/Inc/google-translate/: project.h  status_or.h  translation_client.h  version.h
UTNativeEssentials/ChatDiamond/Src/: ChatDiamondNative.cpp
UTNativeEssentials/Core/: CMakeLists.txt
UTNativeEssentials/Core/Classes/: Object.uc  SimpleCommandlet.uc
UTNativeEssentials/Engine/: CMakeLists.txt
UTNativeEssentials/Engine/Classes/: #PlayerPawn.uc#  Actor.uc  Ammo.uc  Bitmap.uc  Brush.uc  Canvas.uc  Console.uc  Counter.uc  Decal.uc  Decoration.uc  Engine.uc  GameInfo.uc  GameReplicationInfo.uc  HUD.uc  Info.uc  InternetInfo.uc  Inventory.uc  LevelInfo.uc  MapList.uc  Menu.uc  Mover.uc  Mutator.uc  NavigationPoint.uc  Pawn.uc  Pickup.uc  Player.uc  PlayerPawn.uc  PlayerPawn.uc.orig  PlayerReplicationInfo.uc  Projectile.uc  RenderIterator.uc  ReplicationInfo.uc  ScriptedTexture.uc  SpecialEvent.uc  Spectator.uc  StatLog.uc  StatLogFile.uc  Teleporter.uc  TestInfo.uc  Texture.uc  (+6 more)
UTNativeEssentials/google-translate/: CMakeLists.txt  translator.cpp
